Fixed overlap with badges

--- a/src/css/badge.css
+++ b/src/css/badge.css
@@ -15,6 +15,7 @@
 .badge {
     padding: 5px 10px;
     border-radius: 5px;
+    display: inline-block;
 }
 
 .badge-primary,
